# FlaskTest

./: Dockerfile  pyproject.toml  requirements.txt  tasks.py
src/: app.py
src/templates/: index.html
