[tool.poetry]
name = "flaskdocker"
version = "0.1.0"
description = ""
authors = ["Juan Covarrubias <me@juan.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
